--- a/css/styles.css
+++ b/css/styles.css
@@ -1,2 +1,25 @@
-li {
+/* task-3 */
+
+#gallery {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  list-style-type: none;
+}
+
+.gallery-item {
+  margin-right: 10px;
+  padding: 3px;
+
+  border: 1px solid #e1e9e9;
+  border-radius: 5px;
+  background: #e1e9e9;
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.gallery-item:hover {
+  cursor: pointer;
+  transform: scale(1.4);
 }
