--- a/css/styles.css
+++ b/css/styles.css
@@ -23,3 +23,17 @@
   cursor: pointer;
   transform: scale(1.4);
 }
+
+/* task-6 */
+
+#validation-input {
+  border: 3px solid #bdbdbd;
+}
+
+#validation-input.valid {
+  border-color: #4caf50;
+}
+
+#validation-input.invalid {
+  border-color: #f44336;
+}
