--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,12 @@
 
 #gallery {
   display: flex;
-  justify-content: space-between;
+  width: 1200px;
+  justify-content: space-around;
   align-items: center;
+
+  margin-left: auto;
+  margin-right: auto;
 
   list-style-type: none;
 }
@@ -12,7 +16,7 @@
   margin-right: 10px;
   padding: 3px;
 
-  border: 1px solid #e1e9e9;
+  border: 2px solid #e1e9e9;
   border-radius: 5px;
   background: #e1e9e9;
 
